--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ jwt.custom-key=secretkey!123456789034123213sdf12312adsa567890
 # YouTube API Key
  youtube.api.key=AIzaSyA823miqItdJQdGyL6obeeTV--yjGvCjjs
 
+# (??) ?? ???? ??
+spring.jackson.time-zone=Asia/Seoul
