--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ jwt.custom-key=secretkey!123456789034123213sdf12312adsa567890
 
 # (??) ?? ???? ??
 spring.jackson.time-zone=Asia/Seoul
+
+# gpt api key
+gpt.api.key=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
